--- a/index.html
+++ b/index.html
@@ -40,15 +40,17 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">ABSTRACTTABLEMODEL UØVEDE</a>
+            <a class="nav-link js-scroll-trigger" href="#about">UØVEDE</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience">ABSTRACTTABLEMODEL ØVEDE</a>
+            <a class="nav-link js-scroll-trigger" href="#experience">ØVEDE</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#education">SVG</a>
           </li>
-
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#skills">Employee eksempel</a>
+          </li>
         </ul>
       </div>
     </nav>
