--- a/index.html
+++ b/index.html
@@ -46,13 +46,10 @@
             <a class="nav-link js-scroll-trigger" href="#experience">ØVEDE</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#education">SVG</a>
+            <a class="nav-link js-scroll-trigger" href="#education">SVG-Filer</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#skills">Employee eksempel</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="model.svg">EmployeeModel.svg</a>
           </li>
         </ul>
       </div>
@@ -159,18 +156,9 @@ public String getColumnName(int col) { return COLUMN_NAMES[col]; }</p>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">James Buchanan High School</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
-              <p>GPA: 3.56</p>
+              <h3 class="mb-0">Liste over alle svg-filer</h3>
+              <a href="svg/klassediagram.svg">Enkelt klassediagram</a><br>
+              <a href="svg/Model.svg">Employee klassediagram</a>
             </div>
           </div>
 
