--- a/index.html
+++ b/index.html
@@ -159,8 +159,9 @@ public String getColumnName(int col) { return COLUMN_NAMES[col]; }</p>
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Liste over alle svg-filer</h3>
-              <a href="svg/klassediagram.svg">Enkelt klassediagram</a><br>
-              <a href="svg/Model.svg">Employee klassediagram</a>
+              <a href="svg/klassediagram.svg">Enkelt AbstractTableModel klassediagram</a><br>
+              <a href="svg/diagram.svg">Employee klassediagram</a>
+              <a href="svg/persistens.svg">Persistens employee diagram</a>
             </div>
           </div>
 
