--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             <span class="text-primary">TABLEMODEL</span>
           </h1> -->
           <h2 class="mb-5">AbstractTablemodel for uøvde</h2>
-          <p class="mb-5">Under finnes en link til et enkelt klassediagram av AbstractTableModel<br>
-          <a href="svg/klassediagram.svg">Klassediagram</a></p>
+          <p class="mb-5">Under finnes et bilde til et enkelt klassediagram av AbstractTableModel<br>
+          <a href="svg/klassediagram.svg"><img src="img/diagram1.png"></a>
 
           <p class="mb-5">AbstractTableModel er en klasse som oppfører seg som en beholder av alle enhetene i tablemodel, på en måte.
 Klassen AbstractTableModel er abstrakt fordi den implementerer TableModel, som er et interface, uten å oppfylle hele kontrakten. Dette betyr altså at en ny spesialisering av AbstractTableModel må oppfylle resten av kontrakten for denne.</p>
