--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">UØVDE</a>
+            <a class="nav-link js-scroll-trigger" href="#littleexperienced">UØVDE</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience">ØVEDE</a>
+            <a class="nav-link js-scroll-trigger" href="#experienced">ØVEDE</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#education">SVG-Filer</a>
+            <a class="nav-link js-scroll-trigger" href="#svg">SVG-Filer</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#skills">Employee eksempel</a>
+            <a class="nav-link js-scroll-trigger" href="#eksempel">Employee eksempel</a>
           </li>
         </ul>
       </div>
@@ -57,7 +57,7 @@
 
     <div class="container-fluid p-0">
 
-      <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
+      <section class="resume-section p-3 p-lg-5 d-flex d-column" id="littleexperienced">
         <div class="my-auto">
           <!--<h1 class="mb-0">ABSTRACT
             <span class="text-primary">TABLEMODEL</span>
@@ -104,7 +104,7 @@ public String getColumnName(int col) { return COLUMN_NAMES[col]; }</p>
         </div>
       </section>
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experienced">
         <div class="my-auto">
           <h2 class="mb-5">Abstracttablemodel for øvede</h2>
 
@@ -112,41 +112,7 @@ public String getColumnName(int col) { return COLUMN_NAMES[col]; }</p>
             <div class="resume-content mr-auto">
               <h3 class="mb-0">OVERSKRIFT 1</h3>
               <div class="subheading mb-3">UNDERTITTEL</div>
-              <p class="mb-5">Et eksempel på bruk av AbstractTableModel:</p>
 
-              <p class="mb-5">void setValueAt(Object aValue, int rowIndex, int columnIndex) { //depending on your data structure add the aValue object
-                to the specified //rowIndex and columnIndex position in your data object //notify the JTable object: fireTableCellUpdated(row, col); }</p>
-
-              <p class="mb-5">For å slippe å implementere alle metodene til TableModel, kan vi utvide interfacet(extends) ved å legge til AbstractTableModel. Ved å gjøre dette trenger vi i teorien bare å implementere tre metoder<br>
-              ·         En metode som returnerer antallet rader<br>
-              ·         En metode som returnerer antallet kolonner<br>
-              ·         En metode som returnerer verdien som hører til en celle.</p>
-
-              <p class="mb-5">Under ser vi et eksempel på implementasjon som viser et antall ansatte med et brukergrensesnitt basert på Swing. Vi lager TableModel som tilpasser seg en matrise av ansatte.</p>
-              <a><img src="img/employee.png"></a>
-              <p class="mb-5">Vi lager først et objekt Employee med tilhørende metoder<br>
-              <div class="code">public class Employee {<br>
-                private int id;<br>private String name;<br>private string surName;<br>private int age<br>private int salary<br>
-              }</div></p>
-              <p class="mb-5">Så bygger vi opp TableModel klassen med metodene til AbstractTableModel. Dataene fra objektet lagres i dette tilfellet i en Vector, som er en matrise av objekter. Innholdet i en Vector kan hentes ut ved å bruke en index.</p>
-              <p class="mb-5">Vi definerer her hva som skal være overskriften i hver celle i tabellen i tillegg til Vector.
-                <div class="code">public class TableModel extends AbstractTableModel {<br>
-                  private static final long serialVersionUID = 1L;<br>
-                  public String[] = m_colNames = { "ID" , "Name", "Surname", "Age", "Salary" };<br>
-                  public Class[] m_colTypes = { Integer.class, String.class, String.class, Integer.class, Integer.class};<br>
-                  Vector<?> mDataVector;<br>
-                }</div></p>
-                <p class="mb-5">Set og Get metodene kan være som følger:<br>
-                  <div class="code">
-                  public void setValueAt(Object value, int row, int col){<br>
-                    Employee employeeData = (Employee) (m_DataVector.elementAt(row));
-                  }</div>
-                  <div class="code">
-                  public Object getValueAt(int row, int col){
-                    Employee employeeData = (Employee) (m_DataVector.elementAt(row));
-                  }
-                  </div>
-                </p>
 
             </div>
 
@@ -156,7 +122,7 @@ public String getColumnName(int col) { return COLUMN_NAMES[col]; }</p>
 
       </section>
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="svg">
         <div class="my-auto">
           <h2 class="mb-5">SVG</h2>
 
@@ -172,107 +138,65 @@ public String getColumnName(int col) { return COLUMN_NAMES[col]; }</p>
         </div>
       </section>
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="eksempel">
         <div class="my-auto">
-          <h2 class="mb-5">Skills</h2>
+          <h2 class="mb-5">AbstractTableModel eksempel</h2>
+          <div class="subheading mb-3">Eksempel med bruk av employee-klassen</div>
+          <p class="mb-5">Et eksempel på bruk av AbstractTableModel:</p>
 
-          <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-          <ul class="list-inline list-icons">
-            <li class="list-inline-item">
-              <i class="devicons devicons-html5"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-css3"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-javascript"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-jquery"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-sass"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-less"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-bootstrap"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-wordpress"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-grunt"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-gulp"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-npm"></i>
-            </li>
-          </ul>
+          <p class="mb-5">For å slippe å implementere alle metodene til TableModel, kan vi utvide interfacet(extends) ved å legge til AbstractTableModel. Ved å gjøre dette trenger vi i teorien bare å implementere tre metoder<br>
+          ·         En metode som returnerer antallet rader<br>
+          ·         En metode som returnerer antallet kolonner<br>
+          ·         En metode som returnerer verdien som hører til en celle.</p>
 
-          <div class="subheading mb-3">Workflow</div>
-          <ul class="fa-ul mb-0">
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Scrum</li>
-          </ul>
+          <p class="mb-5">Under ser vi et eksempel på implementasjon som viser et antall ansatte med et brukergrensesnitt basert på Swing. Vi lager TableModel som tilpasser seg en matrise av ansatte.</p>
+          <a href="svg/Diagram.svg"><img src="img/employee.png"></a>
+          <p class="mb-5">Vi lager først et objekt Employee med tilhørende metoder<br>
+          <div class="code">public class Employee {<br>
+            private int id;<br>private String name;<br>private string surName;<br>private int age<br>private int salary<br>
+          }</div></p>
+          <p class="mb-5">Så bygger vi opp TableModel klassen med metodene til AbstractTableModel. Dataene fra objektet lagres i dette tilfellet i en Vector, som er en matrise av objekter. Innholdet i en Vector kan hentes ut ved å bruke en index.</p>
+          <p class="mb-5">Vi definerer her hva som skal være overskriften i hver celle i tabellen i tillegg til Vector.
+            <div class="code">public class TableModel extends AbstractTableModel {<br>
+              private static final long serialVersionUID = 1L;<br>
+              public String[] = m_colNames = { "ID" , "Name", "Surname", "Age", "Salary" };<br>
+              public Class[] m_colTypes = { Integer.class, String.class, String.class, Integer.class, Integer.class};<br>
+              Vector<?> mDataVector;<br>
+            }</div></p>
+            <p class="mb-5">Set og Get metodene kan være som følger:<br>
+              <div class="code">
+              public void setValueAt(Object value, int row, int col){<br>
+                Employee employeeData = (Employee) (m_DataVector.elementAt(row));
+              }</div>
+              <div class="code">
+              public Object getValueAt(int row, int col){
+                Employee employeeData = (Employee) (m_DataVector.elementAt(row));
+              }
+              </div>
+            </p>
+            <p class="mb-5">Vi instansierer objektet i Entry point og får resultat<br>
+              <div class="code">
+                public class Main extends JFrame {<br>
+                  private static final long serialVersionUID = 1L;<br>
+                  private TableModel model;<br>
+                  private JTable table;<br><br>
+
+                  public Main() {<br>
+                    Vector&ltEmployee&gt testData = new Vector&ltEmployee&gt(10, 10);<br>
+                    testData.addElement(new Employee(new Integer(1), "Test", "Testen",(new Integer(25)), (new Integer(100000))));<br>
+                    testData.addElement(new Employee(new Integer(2), "K", "R",(new Integer(40)), (new Integer(350000))));<br>
+                    model = new TableModel(testData);<br>
+                    table = new JTable(model);<br>
+                  }<br>
+                }<br>
+              </div>
+            </p>
+            <p class="mb-5">Modellen kan utvides til å inkludere persistens på objektet. Objektene kan lagres eller hentes fra et lager som for eksempel en relasjonell database. Persistensen kan legges i en kontrollklasse som vil være ansvarlig for endringene i tilstand i programmet.</p>
+            <a href="svg/persistens.svg"><img src="img/persistent.png"></a>
+            <p class="mb-5">Målet er at Control-metoden inneholder alle opplysninger om ansatte, inkludert underklasser. Control.control.getAllEmployees(). Denne forteller Employee objektet om å gi all informasjon om seg selv, FullTimeEmployee og PartTimeEmployee.</p>
         </div>
       </section>
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
-        <div class="my-auto">
-          <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skiier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p>
-        </div>
-      </section>
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
-        <div class="my-auto">
-          <h2 class="mb-5">Awards &amp; Certifications</h2>
-          <ul class="fa-ul mb-0">
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              Google Analytics Certified Developer</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              Mobile Web Specialist - Google Certification</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              2<sup>nd</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-            <li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - James Buchanan High School - Hackathon 2006</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              3<sup>rd</sup>
-              Place - James Buchanan High School - Hackathon 2005</li>
-          </ul>
-        </div>
-      </section>
 
     </div>
 
