--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@ public String getColumnName(int col) { return COLUMN_NAMES[col]; }</p>
             <div class="resume-content mr-auto">
               <h3 class="mb-0">OVERSKRIFT 1</h3>
               <div class="subheading mb-3">UNDERTITTEL</div>
-
+              <img src="sekvennsdiagram.png">
+              <p class="mb-5">Her kan vi si et eksempel på hvordan de to metodene som er abstrake kan settes opp, og hvor de blir brukt til å finne det siste objektet i raden og kolonnen, JTable kaller først for å finne indexen på den siste elementet i raden, så kaller den for å finne indexen på kolonnen. for så å putte disse verdiene inn i getValue metoden som returnerer objektet på denne plassen. Her har vi et lite eksempel, med koden som er tatt fra delen av introduksjoen, for de som ikke er så drevene.</p>
 
             </div>
 
