--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@ public String getColumnName(int col) { return COLUMN_NAMES[col]; }</p>
               <div class="subheading mb-3">UML-diagrammer og forklaringer</div>
               <a href="svg/sekvenns.svg"><img src="img/sekvennsdiagram.png"></a>
               <p class="mb-5">Her kan vi si et eksempel på hvordan de to metodene som er abstrake kan settes opp, og hvor de blir brukt til å finne det siste objektet i raden og kolonnen, JTable kaller først for å finne indexen på den siste elementet i raden, så kaller den for å finne indexen på kolonnen. for så å putte disse verdiene inn i getValue metoden som returnerer objektet på denne plassen. Her har vi et lite eksempel, med koden som er tatt fra delen av introduksjoen, for de som ikke er så drevene.</p>
-
+              <a href="svg/"><img src="img/hierarki.png"></a>
+              <p class="mb-5">Her har vi et diagram som viser hva AbstracTableModel arver, hvem pakker som både den og JTable ligger under, dette kan være nyttig for å orientere seg hvor disse pakkene ligger og hvordan sammenhenger og tilhørigheter.</p>
             </div>
 
           </div>
