--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ public String getColumnName(int col) { return COLUMN_NAMES[col]; }</p>
               <div class="subheading mb-3">UML-diagrammer og forklaringer</div>
               <a href="svg/sekvenns.svg"><img src="img/sekvennsdiagram.png"></a>
               <p class="mb-5">Her kan vi si et eksempel på hvordan de to metodene som er abstrake kan settes opp, og hvor de blir brukt til å finne det siste objektet i raden og kolonnen, JTable kaller først for å finne indexen på den siste elementet i raden, så kaller den for å finne indexen på kolonnen. for så å putte disse verdiene inn i getValue metoden som returnerer objektet på denne plassen. Her har vi et lite eksempel, med koden som er tatt fra delen av introduksjoen, for de som ikke er så drevene.</p>
-              <a href="svg/"><img src="img/hierarki.png"></a>
+              <a href="svg/hirearki.svg"><img src="img/hierarki.png"></a>
               <p class="mb-5">Her har vi et diagram som viser hva AbstracTableModel arver, hvem pakker som både den og JTable ligger under, dette kan være nyttig for å orientere seg hvor disse pakkene ligger og hvordan sammenhenger og tilhørigheter.</p>
             </div>
 
@@ -131,8 +131,10 @@ public String getColumnName(int col) { return COLUMN_NAMES[col]; }</p>
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Liste over alle svg-filer</h3>
               <a href="svg/klassediagram.svg">Enkelt AbstractTableModel klassediagram</a><br>
-              <a href="svg/diagram.svg">Employee klassediagram</a>
-              <a href="svg/persistens.svg">Persistens employee diagram</a>
+              <a href="svg/Diagram.svg">Employee klassediagram</a><br>
+              <a href="svg/persistens.svg">Persistens employee diagram</a><br>
+              <a href="svg/hirearki.svg">Hierarki-diagram</a><br>
+              <a href="svg/sekvenns.svg">Sekvennsdiagram</a><br>
             </div>
           </div>
 
