--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@ public String getColumnName(int col) { return COLUMN_NAMES[col]; }</pre></div>
         <div class="my-auto">
           <h2 class="mb-5">Abstracttablemodel for øvede</h2>
               <div class="subheading mb-3">UML-diagrammer og forklaringer</div>
+              <a href="svg/klassediagram2.svg"><img src="img/klassediagram.png"></a>
+              <p class="mb-5">MASSE TEKST HER</p>
               <a href="svg/sekvenns.svg"><img src="img/sekvennsdiagram.png"></a>
               <p class="mb-5">Her kan vi si et eksempel på hvordan de to metodene som er abstrake kan settes opp, og hvor de blir brukt til å finne det siste objektet i raden og kolonnen, JTable kaller først for å finne indexen på den siste elementet i raden, så kaller den for å finne indexen på kolonnen. for så å putte disse verdiene inn i getValue metoden som returnerer objektet på denne plassen. Her har vi et lite eksempel, med koden som er tatt fra delen av introduksjoen, for de som ikke er så drevene.</p>
               <a href="svg/hirearki.svg"><img src="img/hierarki.png"></a>
@@ -118,7 +120,6 @@ public String getColumnName(int col) { return COLUMN_NAMES[col]; }</pre></div>
       </section>
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="eksempel">
         <div class="my-auto">
-          <h2 class="mb-5">AbstractTableModel eksempel</h2>
           <div class="subheading mb-3">Eksempel med bruk av employee-klassen</div>
           <p class="mb-5">Et eksempel på bruk av AbstractTableModel:</p>
 
@@ -169,6 +170,7 @@ public String getColumnName(int col) { return COLUMN_NAMES[col]; }</pre></div>
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Liste over alle svg-filer</h3>
               <a href="svg/klassediagram.svg">Enkelt AbstractTableModel klassediagram</a><br>
+              <a href="svg/klassediagram2.svg">AbstractTableModel klassediagram</a><br>
               <a href="svg/Diagram.svg">Employee klassediagram</a><br>
               <a href="svg/persistens.svg">Persistens employee diagram</a><br>
               <a href="svg/hirearki.svg">Hierarki-diagram</a><br>
