--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <p class="mb-5">Under finnes et bilde til et enkelt klassediagram av AbstractTableModel<br>
           <a href="svg/klassediagram.svg"><img src="img/diagram1.png"></a>
 
-          <p class="mb-5">AbstractTableModel er en klasse som oppfører seg som en beholder av alle enhetene i tablemodel, på en måte.
+          <p class="mb-5">AbstractTableModel er en klasse som oppfører seg som en beholder av alle enhetene i tablemodel, på en måte. Vi kan si at AbstractTableModel er avhengig av TableModel, dette kan sees ved at den stiplede pilen går fra AbstractTableModel til TableModel.
 Klassen AbstractTableModel er abstrakt fordi den implementerer TableModel, som er et interface, uten å oppfylle hele kontrakten. Dette betyr altså at en ny spesialisering av AbstractTableModel må oppfylle resten av kontrakten for denne.</p>
 
 <div class="subheading mb-3">Tre av metodene i AbstractTableModel er abstrakte</div>
