--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ Hvis det da ønskes, kan kolonne-navnene redigeres ved hjelp av å overstyre get
               <br>
               <div class="subheading mb-3">Klassediagram</div>
               <a href="svg/klassediagram2.svg"><img src="img/klassediagram.png"></a>
-              <p class="mb-5">MASSE TEKST HER</p>
+              <p class="mb-5">Her ser vi et klassediagram over AbstractTableModel. AbstracTableModel er en klasse som er avhengig av interfacet TableModel som igjen er avhengig av JTable. Klassen AbstractTableModel implementerer også Serializable som vist på uml-diagrammet. Serializable er en klasse som gjør det mulig å overføre objekter via nettet. I dette tilfellet vil tabellen som konstrueres være objektet som overføres.</p>
               <br>
               <div class="subheading mb-3">Sekvennsdiagram</div>
               <a href="svg/sekvenns.svg"><img src="img/sekvennsdiagram.png"></a>
