--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ Hvis det da ønskes, kan kolonne-navnene redigeres ved hjelp av å overstyre get
               <br>
               <div class="subheading mb-3">Klassediagram over hierarkiet</div>
               <a href="svg/hirearki.svg"><img src="img/hierarki.png"></a>
-              <p class="mb-5">Her har vi et diagram som viser hva AbstracTableModel arver, hvem pakker som både den og JTable ligger under, dette kan være nyttig for å orientere seg hvor disse pakkene ligger og hvordan sammenhenger og tilhørigheter.</p>
+              <p class="mb-5">Her har vi et diagram som viser hva AbstracTableModel arver, hvem pakker som både den og JTable ligger under, dette kan være nyttig for å orientere seg hvor disse pakkene ligger og hvordan sammenhenger og tilhørigheter. AbstracTableModel implementerer også Serializable men vi har valgt å ikke ta det med her for å gjøre skjemaet letter og mer oversiktlig å forstå </p>
 
         </div>
 
