--- a/index.html
+++ b/index.html
@@ -110,15 +110,15 @@ Hvis det da ønskes, kan kolonne-navnene redigeres ved hjelp av å overstyre get
               <br>
               <div class="subheading mb-3">Klassediagram</div>
               <a href="svg/klassediagram2.svg"><img src="img/klassediagram.png"></a>
-              <p class="mb-5">Her ser vi et klassediagram over AbstractTableModel. AbstracTableModel er en klasse som er avhengig av interfacet TableModel som igjen er avhengig av JTable. Klassen AbstractTableModel implementerer også Serializable som vist på uml-diagrammet. Serializable er en klasse som gjør det mulig å overføre objekter via nettet. I dette tilfellet vil tabellen som konstrueres være objektet som overføres.</p>
+              <p class="mb-5">Her ser vi et klassediagram over AbstractTableModel. AbstracTableModel er en klasse som er avhengig av interfacet TableModel som igjen er avhengig av JTable. Klassen AbstractTableModel implementerer også Serializable som vist på uml-diagrammet. Serializable er en klasse som gjør det mulig å overføre objekter via nettet. I dette tilfellet vil tabellen som lages være objektet som overføres ved hjelp av serializable.</p>
               <br>
               <div class="subheading mb-3">Sekvennsdiagram</div>
               <a href="svg/sekvenns.svg"><img src="img/sekvennsdiagram.png"></a>
-              <p class="mb-5">Her kan vi si et eksempel på hvordan de to metodene som er abstrake kan settes opp, og hvor de blir brukt til å finne det siste objektet i raden og kolonnen, JTable kaller først for å finne indexen på den siste elementet i raden, så kaller den for å finne indexen på kolonnen. for så å putte disse verdiene inn i getValue metoden som returnerer objektet på denne plassen. Her har vi et lite eksempel, med koden som er tatt fra delen av introduksjoen, for de som ikke er så drevene.</p>
+              <p class="mb-5">Her kan vi si et eksempel på hvordan de to metodene som er abstrakte kan settes opp, og hvor de blir brukt til å finne det siste objektet i raden og kolonnen. JTable kaller først for å finne indexen på den siste elementet i raden, så kaller den for å finne indexen på kolonnen,for så å putte disse verdiene inn i getValue metoden som returnerer objektet på denne plassen. Her har vi et lite eksempel, med koden som er tatt fra delen av introduksjonen, for de som ikke er så drevne.</p>
               <br>
               <div class="subheading mb-3">Klassediagram over hierarkiet</div>
               <a href="svg/hirearki.svg"><img src="img/hierarki.png"></a>
-              <p class="mb-5">Her har vi et diagram som viser hva AbstracTableModel arver, hvem pakker som både den og JTable ligger under, dette kan være nyttig for å orientere seg hvor disse pakkene ligger og hvordan sammenhenger og tilhørigheter. AbstracTableModel implementerer også Serializable men vi har valgt å ikke ta det med her for å gjøre skjemaet letter og mer oversiktlig å forstå </p>
+              <p class="mb-5">Her har vi et diagram som viser hva AbstractTableModel arver, hvem pakker som både den og JTable ligger under, dette kan være nyttig for å orientere seg hvor disse pakkene ligger og hvordan sammenhenger og tilhørigheter er. AbstractTableModel implementerer også Serializable men vi har valgt å ikke ta det med her for å gjøre skjemaet lettere og mer oversiktlig å forstå.</p>
 
         </div>
 
@@ -156,11 +156,14 @@ Hvis det da ønskes, kan kolonne-navnene redigeres ved hjelp av å overstyre get
               <div class="code">
                 <pre>public Object getValueAt(int row, int col){<br>Employee employeeData = (Employee) (m_DataVector.elementAt(row));<br>}</pre>
               </div><br><br>
-            <p class="mb-5">Vi instansierer objektet i Entry point og får resultat</p><br>
+            <p class="mb-5">Vi instansierer objektet i Entry point</p><br>
               <div class="code">
                 <pre>public class Main extends JFrame {<br>private static final long serialVersionUID = 1L;<br>private TableModel model;<br>private JTable table;<br><br></pre>
                 <pre>public Main() {<br>Vector&ltEmployee&gt testData = new Vector&ltEmployee&gt(10, 10);<br>testData.addElement(new Employee(new Integer(1), "Test", "Testen",(new Integer(25)), (new Integer(100000))));<br>testData.addElement(new Employee(new Integer(2), "K", "R",(new Integer(40)), (new Integer(350000))));<br>model = new TableModel(testData);<br>table = new JTable(model);<br>}<br>}<br></pre>
               </div><br>
+              <p class="mb-5">Resultatet:</p>
+              <img src="img/resultat.png">
+              <br><br>
             <p class="mb-5">Modellen kan utvides til å inkludere persistens på objektet. Objektene kan lagres eller hentes fra et lager som for eksempel en relasjonell database. Persistensen kan legges i en kontrollklasse som vil være ansvarlig for endringene i tilstand i programmet.</p>
             <a href="svg/persistens.svg"><img src="img/persistent.png"></a>
             <p class="mb-5">Målet er at Control-metoden inneholder alle opplysninger om ansatte, inkludert underklasser. Control.control.getAllEmployees(). Denne forteller Employee objektet om å gi all informasjon om seg selv, FullTimeEmployee og PartTimeEmployee.</p>
