--- a/index.html
+++ b/index.html
@@ -162,7 +162,8 @@ Hvis det da ønskes, kan kolonne-navnene redigeres ved hjelp av å overstyre get
                 <pre>public Main() {<br>Vector&ltEmployee&gt testData = new Vector&ltEmployee&gt(10, 10);<br>testData.addElement(new Employee(new Integer(1), "Test", "Testen",(new Integer(25)), (new Integer(100000))));<br>testData.addElement(new Employee(new Integer(2), "K", "R",(new Integer(40)), (new Integer(350000))));<br>model = new TableModel(testData);<br>table = new JTable(model);<br>}<br>}<br></pre>
               </div><br>
               <p class="mb-5">Resultatet:</p>
-              <img src="img/resultat.png">
+              <img src="img/resultat.png"><br><br>
+              <a href="svg/dataflytdiagram.svg"><img src="img/dataflytdiagram.png"></a>
               <br><br>
             <p class="mb-5">Modellen kan utvides til å inkludere persistens på objektet. Objektene kan lagres eller hentes fra et lager som for eksempel en relasjonell database. Persistensen kan legges i en kontrollklasse som vil være ansvarlig for endringene i tilstand i programmet.</p>
             <a href="svg/persistens.svg"><img src="img/persistent.png"></a>
@@ -183,6 +184,7 @@ Hvis det da ønskes, kan kolonne-navnene redigeres ved hjelp av å overstyre get
               <a href="svg/persistens.svg">Persistens employee diagram</a><br>
               <a href="svg/hirearki.svg">Hierarki-diagram</a><br>
               <a href="svg/sekvenns.svg">Sekvennsdiagram</a><br>
+              <a href="svg/dataflytdiagram.svg">Dataflytdiagram></a><br>
             </div>
           </div>
 
