--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ Hvis det da ønskes, kan kolonne-navnene redigeres ved hjelp av å overstyre get
               <a href="svg/persistens.svg">Persistens employee diagram</a><br>
               <a href="svg/hirearki.svg">Hierarki-diagram</a><br>
               <a href="svg/sekvenns.svg">Sekvennsdiagram</a><br>
-              <a href="svg/dataflytdiagram.svg">Dataflytdiagram></a><br>
+              <a href="svg/dataflytdiagram.svg">Dataflytdiagram</a><br>
             </div>
           </div>
 
