--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">AbstractTableModel</span>
         <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded-circle mx-auto mb-2 opa" src="http://idolize.co.in/img/j2se.png" alt="">
+          <img class="img-fluid img-profile rounded-circle mx-auto mb-2 opa" src="img/java.png" alt="">
         </span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -63,7 +63,7 @@
             <span class="text-primary">TABLEMODEL</span>
           </h1> -->
           <h2 class="mb-5">AbstractTablemodel for uøvde</h2>
-          <p class="mb-5">Under finnes et bilde til et enkelt klassediagram av AbstractTableModel<br><br>
+          <p class="mb-5">Under finnes et bilde til et enkelt klassediagram av AbstractTableModel<br><span style="font-size:12px;">NB: Alle SVG-bildene kan klikkes på</span><br>
           <a href="svg/klassediagram.svg"><img src="img/diagram1.png"></a>
 
           <p class="mb-5">AbstractTableModel er en klasse som oppfører seg som en beholder av alle enhetene i tablemodel, på en måte. Vi kan si at AbstractTableModel er avhengig av TableModel, dette kan sees ved at den stiplede pilen går fra AbstractTableModel til TableModel.
