--- a/MEDLEMMER.html
+++ b/MEDLEMMER.html
@@ -53,7 +53,7 @@
           <h4 class="mb-5">Kandidatnummer:</h4>
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">7030<br>7008<br>Joe Mathias Rønning</h3>
+              <h3 class="mb-0">7030<br>7008<br>7022</h3>
             </div>
           </div>
 
